# NF1_3D_organoid_profiling_pipeline

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md
.github/workflows/: auto_upadate.yml  docs.yml  testing.yml
0.preprocessing_data/: HPC_preprocessing.sh  README.md  local_preprocessing.sh  visualize_convolutions.sh
0.preprocessing_data/mapping_utils/: well_map.json
0.preprocessing_data/notebooks/: 0.patient_specific_preprocessing.ipynb  1.make_zstack_and_copy_over.ipynb  1.update_file_structure.ipynb  1z.make_zstack_and_copy_over_CQ1.ipynb  2.make_z-stack_images.ipynb  2.perform_file_corruption_checks.ipynb  (+6 more)
2.segment_images/: child_segmentation.sh  clean_up_segmentation_intermediates_child.sh  clean_up_segmentation_intermediates_parent.sh  grand_parent_segmentation.sh  local_segmentation.sh  local_segmentation_single_organoid.sh  local_testing.sh  parent_segmentation.sh  run_example_convolution_segmentations_local.sh
3.cellprofiling/: HPC_run_featurization_grand_parent.sh  HPC_run_featurization_parent.sh  README.md  local_run_GPU_DL_features.sh  local_run_featurization_grand_parent.sh  local_run_featurization_parent.sh
4.processing_image_based_profiles/: merge_features_child.sh  merge_features_grand_parent.sh  merge_features_local.sh  merge_features_local_convolved_images.sh  merge_features_parent.sh
5.EDA/: run_all_eda_local.sh
6.dynamic_viz_Rshiny/: .Renviron_template  README.md  app.R  deploy_app.R  deploy_app.sh  server.R  ui.R
docs/: Makefile  call_make_file_in_environment.sh  requirements.txt  requiremnts.txt
environments/: R_shiny_env.yml  analysis.yml  image_based_profiling_env.yml  preprocessing_env.yml  r_env.yml  segmentation_env.yml  sphinx_env.yml
src/technical_analysis_utils/: pyproject.toml
src/technical_analysis_utils/src/: technical_analysis_segmentation_utils.py
utils/: pyproject.toml
(+342 files in other folders)
